--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           </li>
           <li><a href="#faq">Faq</a></li>
           <li><a href="#contato">Contato</a></li>
-          <li><a data-modal="open" href="">Login ►</a></li>
+          <li>
+            <a data-modal="open" href="">Login <span class="arrow-black"></span></a>
+          </li>
         </ul>
       </nav>
 
@@ -242,7 +244,7 @@
 
     <section class="modal-container" data-modal="container">
       <div class="modal">
-        <button data-modal="close" class="close">X</button>
+        <button data-modal="close" class="close"></button>
         <form action="">
           <label for="email">Email</label>
           <input type="text" for="email" id="email" />
